@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/Attic/rdesktop-1.4.1.ebuild,v 1.16 2006/07/22 22:28:16 psi29a Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/Attic/rdesktop-1.4.1.ebuild,v 1.17 2007/01/09 19:38:23 grobian Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 mips ppc ppc-macos ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ia64 mips ppc ppc64 sparc x86"
 IUSE="debug ipv6 oss"
 
 RDEPEND="|| (
