@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/Attic/rdesktop-1.5.0-r1.ebuild,v 1.2 2006/12/26 13:18:13 drizzt Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/Attic/rdesktop-1.5.0-r1.ebuild,v 1.3 2007/01/09 19:38:23 grobian Exp $
 
 inherit eutils
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/${PN}/${PN}-${MY_PV}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc-macos ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="ao debug ipv6 oss"
 
 S=${WORKDIR}/${PN}-${MY_PV}
